namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-base-location-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prisoner-base-location-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "education-skills-work-employment-dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "prison-education-alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS Prisoner Base Location"
    cloud-platform.justice.gov.uk/owner: "Education, Skills and Work Team: getreadyforwork@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-base-location-api.git"
    cloud-platform.justice.gov.uk/team-name: "education-skills-and-work-live"
